--- a/src/app/components/admin/components/about/about.component.html
+++ b/src/app/components/admin/components/about/about.component.html
@@ -10,7 +10,7 @@
     <div class="col-lg-2">
 
     </div>
-    <div class="col-lg-8">
+    <div class="col-lg-8" *ngIf="user">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6">
           <strong>Логин : </strong>
