--- a/src/app/components/admin/components/edit-chapter/edit-chapter.component.html
+++ b/src/app/components/admin/components/edit-chapter/edit-chapter.component.html
@@ -1,57 +1,40 @@
 <div class="margin">
 
 </div>
-<div class="card text-center">
-  <div class="card-header">
-    Глава
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">{{chapter.name}}</h5>
-    <p class="card-text">{{chapter.description}}</p>
-  </div>
-</div>
-<h6 class="chap">Навигация по уроку</h6>
-<div class="row">
-  <div class="col-lg-8">
-    <div class="card" *ngFor="let lesson of lessons">
-      <div class="card-header">
-        Урок {{lesson.orderValue}}
+<div class="container" *ngIf="chapter">
+  <div class="row">
+    <div class="col-lg-2">
+
+    </div>
+    <div class="col-lg-8">
+      <div *ngIf="form; else loading">
+          <h6>Редактировать Глава</h6>
+          <form [formGroup]="form" (ngSubmit)="submit()">
+            <div class="form-group">
+              <label for="name">Name: </label>
+              <input type="text" class="form-control" id="name" formControlName="name">
+            </div>
+            <div class="form-group">
+              <label for="description">Description: </label>
+              <input type="text" class="form-control" id="description" formControlName="description">
+            </div>
+            <div class="form-group">
+              <label for="orderValue">OrderValue</label>
+              <input type="number" class="form-control" id="orderValue" formControlName="orderValue">
+            </div>
+            <div class="form-group">
+              <label for="active">Active: </label>
+              <input type="number" class="form-control" id="active" formControlName="active">
+            </div>
+            <button style="float: right" class="btn btn-dark">Сохранить</button>
+          </form>
       </div>
-      <div class="card-body">
-        <h5 class="card-title">{{lesson.title}}</h5>
-        <p class="card-text">{{lesson.addedDate}}</p>
-      </div>
+      <ng-template #loading>
+        Идет загрузка...
+      </ng-template>
+    </div>
+    <div class="col-lg-2">
     </div>
 
   </div>
-  <div class="col-lg-4">
-    <div class="form-chapter">
-      Создать Глава
-      <hr>
-      <form [formGroup]="form" (ngSubmit)="submit()">
-        <div class="form-group">
-          <label for="title">Title: </label>
-          <input type="text" class="form-control" id="title" formControlName="title">
-        </div>
-        <div class="form-group">
-          <label for="content">Content: </label>
-          <input type="text" class="form-control" id="content" formControlName="content">
-        </div>
-        <div class="form-group">
-          <label for="orderValue">OrderValue</label>
-          <input type="number" class="form-control" id="orderValue" formControlName="orderValue">
-        </div>
-        <!--<div class="form-group">
-          <label for="validationDefault04">Тип урока</label>
-          <select class="custom-select" id="validationDefault04" required formControlName="lessonType">
-            <option selected disabled value="">Choose...</option>
-            <option value="1">Лекция</option>
-            <option value="2">Практика</option>
-          </select>
-        </div>-->
-        <button [disabled]="form.invalid" style="float: right" type="submit" class="btn btn-dark">Добавить</button>
-      </form>
-    </div>
-  </div>
 </div>
-
