--- a/src/app/components/admin/components/edit-lesson/edit-lesson.component.html
+++ b/src/app/components/admin/components/edit-lesson/edit-lesson.component.html
@@ -1,1 +1,37 @@
-<p>edit-lesson works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-2">
+
+    </div>
+    <div class="col-lg-8">
+
+      <div class="editLesson" *ngIf="form">
+        <label class="refresh">Редактировать Урок</label>
+        <form [formGroup]="form" (ngSubmit)="submit()">
+          <div class="form-group">
+            <label for="name">Title: </label>
+            <input type="text" class="form-control" id="name" formControlName="title">
+          </div>
+          <div class="form-group">
+            <label for="content">Content: </label>
+            <quill-editor formControlName="content" id="content"></quill-editor>
+          </div>
+          <div class="form-group">
+            <label for="orderValue">OrderValue: </label>
+            <input type="number" class="form-control" id="orderValue" formControlName="orderValue">
+          </div>
+          <div class="form-group">
+            <label for="active">Active: </label>
+            <input type="number" class="form-control" id="active" formControlName="active">
+          </div>
+          <button [disabled]="form.invalid" style="float: right" class="btn btn-dark">Сохранить</button>
+        </form>
+      </div>
+
+    </div>
+    <div class="col-lg-2">
+
+    </div>
+
+  </div>
+</div>
