--- a/src/app/components/admin/components/analytics/analytics.component.html
+++ b/src/app/components/admin/components/analytics/analytics.component.html
@@ -61,6 +61,7 @@
       </div>
     </div>
   </div>
+  <mat-divider style="margin-top: 20px"></mat-divider>
   <div class="row table">
     <div class="col-lg-6">
       <app-table></app-table>
