--- a/src/app/components/admin/components/home-page/home-page.component.scss
+++ b/src/app/components/admin/components/home-page/home-page.component.scss
@@ -1,11 +1,8 @@
-.bd {
-  background-color: #484848;
+table {
+  width: 100%;
 }
-.form-addCourse {
-  border-radius: 5px;
-  padding: 20px;
-  margin-top: 10px;
-}
-.na {
-  margin-top: 10px;
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
 }
