--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -38,37 +38,14 @@
   <div class="jumbotron jumbotron-fluid bg-secondary p-4 mt-5 mb-0">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 cizgi">
-          <div class="card bg-secondary border-0">
-            <div class="card-body text-light text-center">
-              <h5 class="card-title text-white display-4" style="font-size:30px">Spring Boot + Angular</h5>
-              <p class="d-inline lead">Adylzhan Baurzhanuly © 2020<br>
-                <a href="#" class="text-light d-block lead">Blog</a>
-              </p>
-
-            </div>
-          </div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 cizgi">
         </div>
-
         <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 cizgi">
           <div class="card bg-secondary border-0">
             <div class="card-body text-center">
-              <h5 class="card-title text-white display-4" style="font-size:30px">Sergeev Adylzhan</h5>
-              <a class="text-light d-block lead" style="margin-left: -20px" href="#"><i class="fa fa-phone mr-2"></i>+77007770852</a>
-              <a class="text-light d-block lead" href="#"><i class="fa fa-envelope mr-2"></i>sergeevadylzhan@gmail.com</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-          <div class="card bg-secondary border-0">
-            <div class="card-body text-center">
-              <h5 class="card-title text-white display-4" style="font-size:30px">Sosyal Medya</h5>
-
-              <a class="text-light" href="https://www.instagram.com/adylzhan_baurzhanuly/"><i class="fab fa-instagram fa-fw fa-2x"></i></a>
-
-              <a class="text-light" href="https://vk.com/id503884954"><i class="fab fa-vk fa-fw fa-2x"></i></a>
-
+              <a class="text-light d-block lead" href="#"><i class="fa fa-envelope mr-2"></i>: sergeevadylzhan@gmail.com</a>
+              <a class="text-light d-block lead" style="margin-left: -20px" href="#"><i class="fa fa-phone mr-2"></i>: +77007770852</a>
+              <a class="text-light d-block lead" style="margin-left: -20px" href="#"><i class="fa fa-phone mr-2"></i>: +77029494737</a>
             </div>
           </div>
         </div>
