--- a/src/app/components/admin/components/home-page/home-page.component.html
+++ b/src/app/components/admin/components/home-page/home-page.component.html
@@ -1,51 +1,73 @@
 <div class="courses">
   <div class="row">
-    <div class="col-lg-4">
-      <div class="form-addCourse">
-        <label>Добавить курс</label>
-        <form [formGroup]="form" (ngSubmit)="submit()">
-          <div class="form-group">
-            <label for="name">Называние курса</label>
-            <input type="text" class="form-control" id="name" aria-describedby="emailHelp" formControlName="name">
-          </div>
-          <div class="form-group">
-            <label for="description">Описание курса</label>
-            <input type="text" class="form-control" id="description" formControlName="description">
-          </div>
-          <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Тип курса</label>
-          <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-            <option value="1">Сайты</option>
-            <option value="2">Дизайн</option>
-            <option value="3">Языки</option>
-          </select>
-          <br><br>
-          <button style="float: right" type="submit" class="btn btn-outline-dark">Сохранить</button>
-        </form>
-      </div>
-    </div>
-    <div class="col-lg-8">
-      <label>Все Курсы</label>
-      <table class="table">
-        <thead class="thead-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Называние</th>
-          <th scope="col">Описание</th>
-          <th scope="col">Дата добавления</th>
-          <th scope="col">Редактировать</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let course of courses;">
-          <th scope="row">{{course.id}}</th>
-          <td>{{course.name}}</td>
-          <td>{{course.description}}</td>
-          <td>{{course.addedDate | date}}</td>
-          <td><a class="btn btn-dark" [routerLink]="['/admin','course', course.id]">Редактировать</a></td>
-        </tr>
-        </tbody>
+    <div class="col-lg-12">
+      <label>Все курсы</label>
+      <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
+      </mat-form-field>
+
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Называние</th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef>Описание</th>
+          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="addedDate">
+          <th mat-header-cell *matHeaderCellDef>Обновлен</th>
+          <td mat-cell *matCellDef="let element"> {{element.addedDate | date}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="update">
+          <th mat-header-cell *matHeaderCellDef>Редактировать</th>
+          <td mat-cell *matCellDef="let element">
+            <button [routerLink]="['/admin','course', element.id]" mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+              <mat-icon>create</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef>Удалить</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     </div>
-
   </div>
 </div>
+
+<!--<form [formGroup]="form" (ngSubmit)="submit()">
+  <div class="form-group">
+    <label for="name">Называние курса</label>
+    <input type="text" class="form-control" id="name" aria-describedby="emailHelp" formControlName="name">
+  </div>
+  <div class="form-group">
+    <label for="description">Описание курса</label>
+    <input type="text" class="form-control" id="description" formControlName="description">
+  </div>
+  <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Тип курса</label>
+  <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+    <option value="1">Сайты</option>
+    <option value="2">Дизайн</option>
+    <option value="3">Языки</option>
+  </select>
+  <br><br>
+  <button style="float: right" type="submit" class="btn btn-outline-dark">Сохранить</button>
+</form>-->
